cqfd: fix launching of SonarQube scanner in Docker
With the update of SonarQube server, the project was no more able to
launch sonarqube scanner in Docker container.
There is still an issue getting the result:
No pull request found for SonarQube task

SFL: #17866
Change-Id: I0b20b75a561dca8efeb6f64dcb0c8986ecfdf499